--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -1,13 +1,52 @@
+body {
+  margin: 0;
+  height: 100vh;
+}
+
+#root,
+.app-wrapper {
+  display: inline-flex;
+  height: 100%;
+  width: 100%;
+}
+
 .sidenav-wrapper {
-  position: fixed;
+  display: inline-block;
+  height: 100%;
+  width: 30%;
+}
+
+/* Note Body */
+.notebody-wrapper {
+  display: inline-block;
+  height: 100%;
+  width: 70%;
+}
+
+.notebnody {
+  position: absolute;
   top: 0;
-  left: 0;
+  /* display: inline-block; */
+  height: 90%;
+  width: 100%;
 }
 
-.sidenav-toggle {
-  /* Styles for the toggle button go here */
+.notebody-footer {
+  position: absolute;
+  bottom: 0;
+  height: 10%;
+  width: 100%;
 }
 
-.sidenav {
-  /* Styles for the sidenav go here */
+/* New Note */
+.newnote-button {
+  scale: 1.3;
+  border: 0;
+  border-radius: 12px;
+  color: white;
+  background-color: green;
+}
+
+.newnote-button-text {
+  margin-left: 5px;
 }
