--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -10,10 +10,17 @@ body {
   width: 100%;
 }
 
+/* Side Nav */
 .sidenav-wrapper {
   display: inline-block;
   height: 100%;
   width: 30%;
+  border: 0.1px solid;
+}
+
+.notes-button {
+  cursor: pointer;
+  width: 100%;
 }
 
 /* Note Body */
@@ -21,6 +28,7 @@ body {
   display: inline-block;
   height: 100%;
   width: 70%;
+  border: 0.1px solid;
 }
 
 .notebnody {
@@ -40,11 +48,12 @@ body {
 
 /* New Note */
 .newnote-button {
+  cursor: pointer;
   scale: 1.3;
   border: 0;
   border-radius: 12px;
-  color: white;
-  background-color: green;
+  /* color: white; */
+  /* background-color: green; */
 }
 
 .newnote-button-text {
