--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -15,41 +15,57 @@ body {
   display: inline-block;
   height: 100%;
   width: 30%;
-  border: 0.1px solid;
+  /* border: 0.1px solid; */
+}
+
+.notes-wrapper {
+  height: 100vh;
+  overflow: auto;
 }
 
 .notes-button {
   cursor: pointer;
-  width: 100%;
+  width: 98.5%;
+  text-align: left;
+  padding: 20px;
 }
 
 /* Note Body */
 .notebody-wrapper {
   display: inline-block;
+  position: relative;
   height: 100%;
   width: 70%;
-  border: 0.1px solid;
+  /* border: 0.1px solid; */
 }
 
-.notebnody {
-  position: absolute;
-  top: 0;
+.notebody-header {
+  padding: 16px;
+  height: 5%;
+}
+
+.notebody {
+  /* position: absolute; */
+  /* top: 0; */
   /* display: inline-block; */
-  height: 90%;
-  width: 100%;
+  padding: 30px;
+  height: 80%;
+  /* width: 100%; */
 }
 
 .notebody-footer {
   position: absolute;
   bottom: 0;
-  height: 10%;
+  height: 5%;
   width: 100%;
 }
 
 /* New Note */
 .newnote-button {
+  position: relative;
   cursor: pointer;
   scale: 1.3;
+  left: 48%;
   border: 0;
   border-radius: 12px;
   /* color: white; */
