--- a/client/src/styles/styles.css
+++ b/client/src/styles/styles.css
@@ -59,7 +59,7 @@ body {
   font-size: 0.9em;
 }
 
-/* Note */
+/* Note Header */
 .note-wrapper {
   display: inline-block;
   position: relative;
@@ -76,18 +76,18 @@ body {
   border-bottom-width: 1px;
 }
 
-.note-header-dropdown-button {
+.note-header-delete-button {
   cursor: pointer;
   top: 0;
   right: 0;
+  margin-right: 16px;
+  scale: 1.1;
   border: 0;
-  background-color: white;
+  vertical-align: middle;
+  border-radius: 12px;
 }
 
-.note-header-dropdown-text {
-  scale: 2.3;
-}
-
+/* Note */
 .note {
   padding: 30px;
   height: 80%;
@@ -121,6 +121,7 @@ body {
   position: relative;
   cursor: pointer;
   scale: 1.3;
+  height: 75%;
   left: 48%;
   border: 0;
   border-radius: 12px;
